# bighorn-dns

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
example/: udp.cpp  udp_basic.cpp  udp_recursive.cpp
examples/: udp_recursive.cpp
include/bighorn/: buffer.hpp  data.hpp  error.hpp  hostname_parser.hpp  lookup.hpp  recursive_lookup.hpp  resolver.hpp  responder.hpp  rr.hpp  static_lookup.hpp  udp.hpp
src/: buffer.cpp  data.cpp  error.cpp  hostname_parser.cpp  lookup.cpp  resolver.cpp  responder.cpp  rr.cpp  static_lookup.cpp  udp.cpp
src/hornbill/: data.cpp  hostname_parser.cpp  resolver.cpp
test/: stream_tester.hpp  test_byte_output.cpp  test_hostname_parser.cpp  test_input.cpp  test_pointer.cpp  test_resolution.cpp  test_responder.cpp  test_standard_queries.cpp  test_unreliable_server.cpp  test_wildcard.cpp  unreliable_udp_server.hpp
